# Lab_Progra_Project_1

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  bitacora.txt  config.sh  docker.sh  guia_Instalacion.txt
data/: Archivo_de_entrada_1.txt  Archivo_de_entrada_2.txt
include/: DEFINES.h  defN_SIDES.h  drawtxt.h  leerArchivo.h  voronoi.h  voronoi_test.h
rosetta/: main.c  prueba.pnm  voronoiR.c  vr
src/: leerArchivo.h  main.cpp
src/drawtxt/: drawTEXT.cpp  executable
test/: data_In.h  main.cpp  positive_negative.h  test.txt  test2.txt
